--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -84,7 +84,7 @@ remove.0=Remove {0}
 replace.postfix.0.with.prefix.0=Replace postfix {0} with prefix {0}
 replace.0.with.1=Replace {0} with binary {1}
 gr.deprecated.api.usage=Deprecated API inspection
-category,method.0.cannot.be.applied.to.1=Category method ''{0}'' cannot be applied to ''{1}''
+category.method.0.cannot.be.applied.to.1=Category method ''{0}'' cannot be applied to ''{1}''
 local.var.0.is.reassigned.in.closure=Local variable {0} is reassigned in {1} with other type
 anonymous.class=anonymous class
 closure=closure
