--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -259,3 +259,5 @@ dark.laf.available=true
 actionSystem.force.alt.gr=false
 completion.show.intention.icon=true
 tabs.alphabetical=false
+# temporary: until tested
+git.warn.about.crlf=false
