IDEA-86646 (inspection "size()==0 is replaceable with isEmpty()" triggers for project level 1.5)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1458,6 +1458,8 @@ interface.never.implemented.option=Ignore interfaces which only declare constant
 size.replaceable.by.isempty.display.name='size() == 0' replaceable with 'isEmpty()'
 size.replaceable.by.isempty.quickfix=Replace with 'isEmpty()'
 size.replaceable.by.isempty.negation.ignore.option=Ignore expressions which would be replaced with '!isEmpty()'
+ignored.classes.table=Ignored classes
+choose.class.type.to.ignore=Choose class type to ignore
 loop.condition.not.updated.inside.loop.display.name=Loop variable not updated inside loop
 loop.condition.not.updated.inside.loop.problem.descriptor='#ref' is not updated inside loop #loc
 utility.class.without.private.constructor.option=Ignore classes with only a main method
