remove period at the end of inspection problem descriptor

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -152,7 +152,7 @@ default.tostring.call.problem.descriptor=Call to default 'toString()' on <code>#
 octal.and.decimal.integers.in.same.array.display.name=Octal and decimal integers in same array
 octal.and.decimal.integers.in.same.array.problem.descriptor=Octal and decimal integers in the same array initializer #loc
 result.of.object.allocation.ignored.display.name=Result of object allocation ignored
-result.of.object.allocation.ignored.problem.descriptor=Result of <code>new #ref()</code> is ignored. #loc
+result.of.object.allocation.ignored.problem.descriptor=Result of <code>new #ref()</code> is ignored #loc
 use.0index.in.jdbc.resultset.display.name=Use of index 0 in JDBC ResultSet
 use.0index.in.jdbc.resultset.problem.descriptor=Use of index '0' in JDBC ResultSet #loc
 use.0index.in.jdbc.prepared.statement.problem.descriptor=Use of index '0' in JDBC PreparedStatement #loc
