two more periods removed

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -951,8 +951,8 @@ throw.caught.locally.problem.descriptor=<code>#ref</code> caught by containing '
 throw.caught.locally.ignore.option=Ignore rethrown exceptions
 return.from.finally.block.problem.descriptor=<code>#ref</code> inside 'finally' block #loc
 continue.or.break.from.finally.block.problem.descriptor=<code>#ref</code> inside 'finally' block #loc
-bad.exception.declared.problem.descriptor=Prohibited exception <code>#ref</code> declared. #loc
-bad.exception.caught.problem.descriptor=Prohibited exception <code>#ref</code> caught. #loc
+bad.exception.declared.problem.descriptor=Prohibited exception <code>#ref</code> declared #loc
+bad.exception.caught.problem.descriptor=Prohibited exception <code>#ref</code> caught #loc
 checked.exception.class.problem.descriptor=Checked exception class <code>#ref</code> #loc
 unchecked.exception.class.problem.descriptor=Unchecked exception class <code>#ref</code> #loc
 thread.death.rethrown.problem.descriptor=<code>#ref</code> not rethrown #loc
