WI-11885 Execute command (external tool / command-line script) on commit

--- a/platform/platform-resources-en/src/messages/ToolsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ToolsBundle.properties
@@ -55,3 +55,6 @@ tools.unknown.external.tool=Unknown external tool
 tools.before.run.description=External tool ''{0}''
 tools.failed.to.save.changes.0=Failed to save changes: {0}
 tools.before.run.provider.name=Run External tool
+tools.after.commit.description=Run tool:
+tools.unnamed.group=[unnamed group]
+tools.list.item.none=(none)
