--- a/plugins/tasks/tasks-core/src/META-INF/plugin.xml
+++ b/plugins/tasks/tasks-core/src/META-INF/plugin.xml
@@ -21,11 +21,14 @@
   <actions>
 
     <group id="task.actions">
-      <action id="tasks.activate" class="com.intellij.tasks.actions.OpenTaskAction" text="_Open Task...">
-        <keyboard-shortcut keymap="$default" first-keystroke="alt shift N"/>
-      </action>
+      <!--<action id="tasks.activate" class="com.intellij.tasks.actions.OpenTaskAction" text="_Open Task...">-->
+        <!--<keyboard-shortcut keymap="$default" first-keystroke="alt shift G"/>-->
+      <!--</action>-->
       <action id="tasks.switch" class="com.intellij.tasks.actions.SwitchTaskAction" text="_Switch Task...">
         <keyboard-shortcut keymap="$default" first-keystroke="alt shift T"/>
+      </action>
+      <action id="tasks.goto" class="com.intellij.tasks.actions.GotoTaskAction">
+        <keyboard-shortcut keymap="$default" first-keystroke="alt shift N"/>
       </action>
       <separator/>
       <action id="tasks.create.changelist" class="com.intellij.tasks.actions.CreateChangelistAction" text="Create Change_list..."/>
