IDEA-19061 Integrate the Rearranger-plugin into core-IDEA
Arrangement settings, iteration 2

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -548,3 +548,6 @@ desktop.entry.preparing=Preparing entry...
 desktop.entry.installing=Installing entry...
 desktop.entry.sudo.prompt=Please enter your password to create a desktop entry
 title.tabs.and.indents=Tabs and Indents
+
+# Arrangement
+tab.title.arrangement=Arrangement
