--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1969,3 +1969,6 @@ make.constructor.public=Make constructor 'public'
 string.concatenation.missing.whitespace.display.name=String literal concatenation missing whitespace
 string.concatenation.missing.whitespace.problem.descriptor=String literal concatenation missing whitespace #loc
 string.concatenation.missing.whitespace.option=Ignore when not both sides are string literals
+negated.equality.expression.display.name=Negated equality expression
+negated.equality.expression.problem.descriptor=Negating ''{0}'' #loc
+negated.equality.expression.quickfix=Remove negation
