IDEA-89882 (RFE: SimplifiableEqualsExpression inspection should work for String.equalsIgnoreCase())

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1920,8 +1920,8 @@ empty.directories.problem.descriptor=Empty directory <code>{0}</code>
 empty.directories.only.under.source.roots.option=Only report empty directories located under a source folder
 empty.directories.delete.quickfix=Delete empty directory ''{0}''
 simplifiable.equals.expression.display.name=Unnecessary 'null' check before 'equals()' call
-simplifiable.equals.expression.problem.descriptor=Unnecessary 'null' check #loc
-simplifiable.equals.expression.quickfix=Flip '.equals()' and remove unnecessary 'null' check
+simplifiable.equals.expression.problem.descriptor=Unnecessary ''null'' check before ''{0}()'' call #loc
+simplifiable.equals.expression.quickfix=Flip ''.{0}()'' and remove unnecessary ''null'' check
 cast.to.concrete.class.option=Ignore casts to an abstract class type
 instanceof.interfaces.option=Ignore instanceof abstract class
 instance.variable.of.concrete.class.option=Ignore instance fields whose type is an abstract class
