Added new generic introduce variable fix for IDEA-89625 (Create a new inspection to report on method calls inside loop conditions.)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1359,6 +1359,7 @@ c.style.array.declaration.replace.quickfix=Replace with Java-style array declara
 chained.method.call.ignore.option=Ignore chained method calls in field initializers
 chained.method.call.ignore.this.super.option=Ignore chained method calls in 'this()' and 'super()' calls
 introduce.variable.quickfix=Introduce variable
+introduce.variable.may.change.semantics.quickfix=Introduce variable (may change semantics)
 flip.comparison.quickfix=Flip comparison
 control.flow.statement.without.braces.add.quickfix=Add braces
 extends.object.remove.quickfix=Remove redundant 'extends Object'
