highlighting for body of abstract method

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -326,3 +326,4 @@ unexpected.attribute.type.0=Unexpected attribute type\: ''{0}''
 annotation.attribute.should.have.return.type.declaration=Annotation attribute should have return type declaration
 interface.members.are.not.allowed.to.be=Interface members are not allowed to be {0}
 abstract.method.cannot.be.final=Abstract method cannot be final
+abstract.methods.must.not.have.body=Abstract methods must not have body
