IDEA-89628 (Add second auto-fix to inspection "Unchecked exception declared in 'throws' clause")

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1953,6 +1953,7 @@ absolute.alignment.in.user.interface.quickfix=Replace with ''{0}.{1}''
 throws.runtime.exception.display.name=Unchecked exception declared in 'throws' clause
 throws.runtime.exception.problem.descriptor=Unchecked exception <code>#ref</code> declared in 'throws' clause #loc
 throws.runtime.exception.quickfix=Remove ''{0}'' from ''throws'' clause
+throws.runtime.exception.move.quickfix=Move ''{0}'' to Javadoc ''@throws'' tag
 empty.class.ignore.parameterization.option=Ignore class if it is a parameterization of a super type
 ambiguous.field.access.display.name=Inherited field accessed while local variable, parameter or field access from surrounding class might be expected
 ambiguous.field.access.hides.local.variable.problem.descriptor=Field <code>#ref</code> from super class ''{0}'' accessed, while local variable access might be expected #loc
