IDEA-89110 (use password input field)

--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -1,3 +1,5 @@
+subversion.name=Subversion
+
 #Actions&Plugin info
 group.SubversionFileGroup.text=SVN
 action.Subversion.BrowseSVNRepository.text=Bro_wse Subversion Repository...
@@ -78,6 +80,10 @@ checkbox.ssl.keep.for.current.session=&Save Credentials
 
 progress.text.create.remote.folder=Create Remote Folder
 message.text.error=Error
+
+# GNOME keyring dialog
+gnome.keyring.prompt.nameless=Please provide GNOME Keyring password
+gnome.keyring.prompt.named=Please provide '{0}' GNOME Keyring password
 
 #Repository Browser
 dialog.title.browser.copy.or.move=Copy or Move
@@ -304,7 +310,6 @@ exception.text.cannot.annotate.directory=Annotation operation only makes sence f
 progress.text.computing.annotation=Computing annotation for ''{0}''
 action.text.annotate=Annotate
 checkbox.chckin.keep.files.locked=&Keep files locked
-border.show.changes.dialog.subversion.group=Subversion
 progress.title.commit=Commit
 progress.text.committing.changes.below=Creating commit packets...
 status.text.committed.revision=Committed revision {0}.
