IDEA-86406 add a hotkey support for "Show all affected paths"
* Define ShowAllAffectedGenericAction in the XML, so that it is registered.
* Don't create new instances of the action from the plugins: use getInstance() instead.
  (otherwise, in particular, title and icon won't be applied)
* Define default shortcuts for Default (alt shift A) and Mac (meta ctrl A) schemes (both are free).

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1095,6 +1095,8 @@ action.ConfigureFileDefaultEncoding.text=Configure Default Encoding...
 action.ConfigureFileDefaultEncoding.description=Configure default encoding for files, files in directories or in the whole project
 action.ChangeFileEncodingGroupAction.text=Change File Encoding
 action.ChangeFileEncodingGroupAction.description=Change File Encoding
+action.VcsHistory.ShowAllAffected.text=Show all affected files
+action.VcsHistory.ShowAllAffected.description=Show all changes made in the chosen revision
 
 action.AddFrameworkSupport.text=Add Framework Support...
 
