IDEA-80787 inline android style refactoring

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -422,3 +422,7 @@ invalid.file.resource.name.error=Resource file name must contain only lowercase 
 invalid.file.resource.name.error1=Invalid resource file name
 invalid.resource.name.error=Invalid resource name ''{0}''
 android.extract.style.title=Extract Android Style
+android.inline.style.title=Inline Android Style
+android.inline.style.command.name=Inline Style ''{0}''
+android.inline.style.inline.all.text=Inline &all references and remove the style
+android.inline.style.inline.this.text=Inline &this usage and keep the style
