IDEA-19061 Integrate the Rearranger-plugin into core-IDEA
Providing ability to add new conditions

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -551,3 +551,6 @@ title.tabs.and.indents=Tabs and Indents
 
 # Arrangement
 tab.title.arrangement=Arrangement
+arrangement.action.add.and.node.text=And
+arrangement.action.add.and.node.description=Add 'and' condition
+arrangement.label.type=Type
