IDEA-19061 Integrate the Rearranger-plugin into core-IDE
UI for adding new rule condition

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -553,4 +553,4 @@ title.tabs.and.indents=Tabs and Indents
 tab.title.arrangement=Arrangement
 arrangement.action.add.and.node.text=And
 arrangement.action.add.and.node.description=Add 'and' condition
-arrangement.label.type=Type
+arrangement.text.negate=Negate
