--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -169,6 +169,7 @@ make.protected.intention.name=Make 'protected'
 make.protected.intention.family.name=Make Protected
 make.private.intention.name=Make 'private'
 make.private.intention.family.name=Make Private
+change.variable.type.to.rhs.type.intention.family.name=Change Variable Type to Type of Initializer
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
@@ -202,6 +203,7 @@ flip.setter.call.intention.name=Flip Setter Call
 adapter.to.listener.intention.name=Replace extension of ''{0}'' with ''Listener'' implementation
 obscure.thrown.exceptions.intention.name=Replace with ''throws {0}''
 add.array.creation.expression.intention.name=Add ''new {0}''
+change.variable.type.to.rhs.type.intention.name=Declare ''{0}'' with type ''{1}''
 
 
 #categories
