--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1974,3 +1974,5 @@ string.concatenation.missing.whitespace.option=Ignore when not both sides are st
 negated.equality.expression.display.name=Negated equality expression
 negated.equality.expression.problem.descriptor=Negating ''{0}'' #loc
 negated.equality.expression.quickfix=Remove negation
+suspicious.array.cast.display.name=Suspicious array cast
+suspicious.array.cast.problem.descriptor=Suspicious cast to <code>#ref</code>
