--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -687,13 +687,16 @@ action.GenerateJavadoc.text=Generate Java_Doc...
 action.GenerateJavadoc.description=Run the JavaDoc tool
 group.Macros.text=_Macros
 group.Macros.description=View, Change, Record, Play Macros
-group.StanardMacroActions.text=Standard Macro Actions
+group.StandardMacroActions.text=Standard Macro Actions
 action.PlaybackLastMacro.text=Pla_y Back Last Macro
 action.PlaybackLastMacro.description=Play Back last used macro
 action.StartStopMacroRecording.text=Start/Stop Macro _Recording
 action.StartStopMacroRecording.description=Start/Stop recording of a new macro
 action.EditMacros.text=_Edit Macros
 action.EditMacros.description=Configure existing macros
+action.PlaySavedMacrosAction.text=Play Saved Macros...
+action.PlaySavedMacrosAction.description=Play Saved Macros
+group.MacrosGroup.text=Macro Actions
 action.ValidateXml.text=_Validate
 action.ValidateXml.description=Validate the current XML file
 action.GenerateDTD.text=Generate DTD from _XML File
@@ -1192,7 +1195,6 @@ group.EditorPopupMenu.Run.text=Compile/Run Actions
 group.ProjectViewCompileGroup.text=Compile/Debug Actions
 group.ProjectViewAnalysisGroup.text=Analysis Actions
 action.PerformanceReport.text=Submit Performance Report
-group.MacrosGroup.text=Macro Actions
 group.PairFileActions.text=Actions on Pairs of Files
 group.RefactoringMenu1.text=Refactoring Actions (1)
 group.RefactoringMenu2.text=Refactoring Actions (2)
@@ -1244,8 +1246,6 @@ group.AnalyzeJavaMenu.text=Analyze Java Menu
 group.AnalyzeJavaMenu.description=Analyze Java Menu
 action.InvalidateCaches.text=Invalidate Caches...
 action.InvalidateCaches.description=Force rebuild of all caches and indices on next startup
-group.PlaySavedMacroActions.text=Play Saved Macros
-group.PlaySavedMacroActions.description=Play Saved Macros
 group.ToolsBasicGroup.text=Tools Basic Group
 group.ToolsBasicGroup.description=Tools Basic Group
 group.ToolbarNewElement.text=Toolbar New Element Group
