IDEA-90074 (Static method only used from one other class shall ignore test classes)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1470,6 +1470,7 @@ static.method.only.used.in.one.class.problem.descriptor=Static method <code>#ref
 static.method.only.used.in.one.class.problem.descriptor.anonymous.implementing=Static method <code>#ref()</code> is only used from an anonymous class implementing ''{0}'' #loc
 static.method.only.used.in.one.class.problem.descriptor.anonymous.extending=Static method <code>#ref()</code> is only used from an anonymous class extending ''{0}'' #loc
 static.method.only.used.in.one.class.quickfix=Move method
+static.method.only.used.in.one.class.ignore.test.option=Ignore when only used from a test class
 unary.plus.display.name=Unary plus
 unary.plus.problem.descriptor=Unary <code>#ref</code> operator #loc
 await.without.corresponding.signal.display.name='await()' without corresponding 'signal()'
