IDEA-19061 Integrate the Rearranger-plugin into core-IDEA
New rule editing approach is applied

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -550,7 +550,8 @@ desktop.entry.sudo.prompt=Please enter your password to create a desktop entry
 title.tabs.and.indents=Tabs and Indents
 
 # Arrangement
-tab.title.arrangement=Arrangement
-arrangement.action.add.and.node.text=And
-arrangement.action.add.and.node.description=Add 'and' condition
+arrangement.title.settings.tab=Arrangement
+arrangement.title.editor=Edit rule
+arrangement.text.type=Type
+arrangement.text.modifier=Modifier
 arrangement.text.negate=Negate
