more consistent problem descriptor

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -908,7 +908,7 @@ final.method.problem.descriptor=Method declared <code>#ref</code> #loc
 class.initializer.problem.descriptor=Non-'static' initializer #loc
 class.may.be.interface.problem.descriptor=<code>#ref</code> may be interface #loc
 non.protected.constructor.in.abstract.class.problem.descriptor=Constructor <code>#ref</code> is not declared 'protected' in 'abstract' class #loc
-class.without.constructor.problem.descriptor=<code>#ref</code> has no constructor #loc
+class.without.constructor.problem.descriptor=Class <code>#ref</code> has no constructor #loc
 abstract.class.without.abstract.methods.problem.descriptor=Class <code>#ref</code> is declared 'abstract', and has no 'abstract' methods #loc
 final.method.in.final.class.problem.descriptor=Method declared <code>#ref</code> in 'final' class #loc
 protected.member.in.final.class.problem.descriptor=Class member declared <code>#ref</code> in 'final' class #loc
