--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1977,3 +1977,6 @@ negated.equality.expression.problem.descriptor=Negating ''{0}'' #loc
 negated.equality.expression.quickfix=Remove negation
 suspicious.array.cast.display.name=Suspicious array cast
 suspicious.array.cast.problem.descriptor=Suspicious cast to <code>#ref</code>
+public.constructor.display.name='public' constructor
+public.default.constructor.problem.descriptor=Class <code>#ref</code> has public default constructor
+public.constructor.problem.descriptor=Public constructor <code>#ref()</code>
