Platform:Settings: line ending options clarified
cherry-picked from 73953cc56a50ea1305e6bdc3398b838d2cad1322
Changed quotes to braces.

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -415,10 +415,10 @@ checkbox.indent.absolute.label.indent=Absolute label indent
 checkbox.do.not.indent.top.level.class.members=Do not indent top level class members
 checkbox.use.relative.indents=Use indents relative to expression start
 tooltip.indent.must.be.multiple.of.tab.size.for.smart.tabs.to.operate=Indent must be multiple of tab size for smart tabs to operate
-combobox.crlf.system.dependent=System Dependent
-combobox.crlf.unix=Unix \n
-combobox.crlf.windows=Windows \r\n
-combobox.crlf.mac=Mac \r
+combobox.crlf.system.dependent=System-Dependent
+combobox.crlf.unix=Unix and OS X (\\n)
+combobox.crlf.windows=Windows (\\r\\n)
+combobox.crlf.mac=Classic Mac (\\r)
 group.tabs.and.indents=Tabs and Indents
 checkbox.indent.use.same.settings.for.all.file.types=Use default indent options (General)
 tab.indent.other=Other
