fix labels IDEA-89742

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -33,6 +33,7 @@ ToggleButton.foreground=cccccc
 Separator.background=444444
 Separator.foreground=888888
 
+Label.background=404040
 Label.foreground=cccccc
 Focus.color=ff0000
 
