quickfix for "'public' constructor" inspection

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1980,3 +1980,4 @@ suspicious.array.cast.problem.descriptor=Suspicious cast to <code>#ref</code>
 public.constructor.display.name='public' constructor
 public.default.constructor.problem.descriptor=Class <code>#ref</code> has public default constructor
 public.constructor.problem.descriptor=Public constructor <code>#ref()</code>
+public.constructor.quickfix=Replace constructor with factory method
