--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -426,3 +426,4 @@ android.inline.style.title=Inline Android Style
 android.inline.style.command.name=Inline Style ''{0}''
 android.inline.style.inline.all.text=Inline &all references and remove the style
 android.inline.style.inline.this.text=Inline &this usage and keep the style
+android.extract.as.include.title=Extract Android Layout
