link with LLDB. experimental. see registry: "appcode.in_process_lldb" key to enable in-process LLDB. SWIG-generated interface to LLDB. LLDBDriver -> LLDBProtobufDriver, LLDBSwigDriver.

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -261,3 +261,4 @@ completion.show.intention.icon=true
 tabs.alphabetical=false
 # temporary: until tested
 git.warn.about.crlf=false
+appcode.in_process_lldb=false
