IDEA-86518 (Quickfix for identical catch branches produces incrorrect and incompilable code)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1859,7 +1859,7 @@ package.dot.html.convert.command=package.html to package-info.java conversion
 choose.super.class.to.ignore=Choose class
 ignore.anonymous.inner.classes=Ignore anonymous inner classes
 try.with.identical.catches.display.name=Identical 'catch' branches in 'try' statement
-try.with.identical.catches.problem.descriptor=Identical 'catch' branches in 'try' statement #loc
+try.with.identical.catches.problem.descriptor='catch' branch identical to ''{0}'' branch #loc
 if.can.be.switch.display.name='if' replaceable with 'switch'
 if.can.be.switch.problem.descriptor=<code>#ref</code> statement replaceable with 'switch' statement #loc
 if.can.be.switch.quickfix=Replace with 'switch'
@@ -1868,7 +1868,7 @@ if.can.be.switch.int.option=Suggest switch on numbers
 if.can.be.switch.enum.option=Suggest switch on enums
 unnecessarily.qualified.inner.class.access.option=Ignore references for which an import is needed
 unqualified.inner.class.access.option=Ignore references to local inner classes
-try.with.identical.catches.quickfix=Collapse catch blocks into multi-catch
+try.with.identical.catches.quickfix=Collapse 'catch' blocks
 confusing.else.option=<html>Also report when there are no more statements after the 'if' statement</html>
 html.tag.can.be.javadoc.tag.display.name=<code>...</code> can be replaced with {@code ...}
 html.tag.can.be.javadoc.tag.problem.descriptor=<code>#ref...\\&lt;/code\\&gt;</code> can be replaced with '{@code ...}' #loc
