lambda: expand lambda to anonymous class intention

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -210,6 +210,10 @@
       <className>com.siyeh.ipp.types.ReplaceDiamondWithExplicitTypeArgumentsIntention</className>
       <categoryKey>intention.category.declaration</categoryKey>
     </intentionAction>
+    <intentionAction>
+      <className>com.siyeh.ipp.types.ReplaceLambdaWithAnonymousIntention</className>
+      <categoryKey>intention.category.declaration</categoryKey>
+    </intentionAction>
 
     <intentionAction>
       <className>com.siyeh.ipp.decls.ChangeVariableTypeToRhsTypeIntention</className>
