--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -161,6 +161,8 @@ obscure.thrown.exceptions.intention.family.name=Replace Exceptions in Throws Cla
 add.array.creation.expression.intention.family.name=Add Array Creation Expression
 replace.diamond.with.explicit.type.arguments.intention.name=Replace '<>' with explicit type arguments
 replace.diamond.with.explicit.type.arguments.intention.family.name=Replace Diamond with Explicit Type Arguments
+replace.lambda.with.anonymous.intention.name=Replace lambda with anonymous class
+replace.lambda.with.anonymous.intention.name.family.name=Replace lambda with anonymous class
 make.public.intention.name=Make 'public'
 make.public.intention.family.name=Make Public
 make.package.private.intention.name=Make package-local
